have the player face the collider

--- a/built-to-scale/Cargo.toml
+++ b/built-to-scale/Cargo.toml
@@ -5,7 +5,7 @@ authors = [""]
 edition = "2021"
 
 [dependencies]
-agb = "0.20.5"
+agb = { path = "../../agb/agb" }
 util = { path = "../util" }
 
 
