Attempt to get triagular shape planet working

--- a/built-to-scale/Cargo.toml
+++ b/built-to-scale/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 agb = { path = "../../agb/agb" }
-util = { path = "../util" }
+util = { path = "../util", features = ["agb"] }
 
 
 [profile.dev]
