load map from tiled

--- a/built-to-scale/Cargo.toml
+++ b/built-to-scale/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 agb = { path = "../../agb/agb" }
 util = { path = "../util", features = ["agb"] }
-
+map = { path = "../map" }
 
 [profile.dev]
 opt-level = 3
