use released agb version

--- a/map/Cargo.toml
+++ b/map/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 phf = { version = "0.11.1", default-features = false, features = ["macros"] }
 util = { path = "../util" }
-agb_fixnum = { path = "../../agb/agb-fixnum" }
+agb_fixnum = { version = "0.21.0" }
 
 [build-dependencies]
 map-compiler = { path = "../map-compiler" }
