--- a/built-to-scale/Cargo.toml
+++ b/built-to-scale/Cargo.toml
@@ -5,8 +5,8 @@ authors = [""]
 edition = "2021"
 
 [dependencies]
-agb = { path = "../../agb/agb" }
-agb_tracker = { path = "../../agb/tracker/agb-tracker" }
+agb = { version = "0.21.0" }
+agb_tracker = { version = "0.21.0" }
 util = { path = "../util", features = ["agb"] }
 map = { path = "../map" }
 
