--- a/map-compiler/Cargo.toml
+++ b/map-compiler/Cargo.toml
@@ -11,5 +11,5 @@ quote = "1"
 proc-macro2 = "1"
 phf_codegen = "0.11.1"
 nalgebra = "0.33.0"
-agb_fixnum = { path = "../../agb/agb-fixnum" }
+agb_fixnum = { version = "0.21.0" }
 itertools = "0.13.0"
