--- a/sfx/Cargo.toml
+++ b/sfx/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-agb = { path = "../../agb/agb" }
-agb_tracker = { path = "../../agb/tracker/agb-tracker" }
+agb = { version = "0.21.0" }
+agb_tracker = { version = "0.21.0" }
